# django-trusted-devices

./: .flake8  .gitignore  404.html  Makefile  README.md  context7.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  exceptions.md  geolocation.md  index.md  license.md  signals.md  usage.md
exceptions/: index.html
geolocation/: index.html
license/: index.html
overrides/: main.html
search/: search_index.json
signals/: index.html
src/trusted_devices/: __init__.py  admin.py  apps.py  authentication.py  exceptions.py  handlers.py  models.py  permissions.py  schema.py  serializers.py  settings.py  signals.py  tokens.py  urls.py  utils.py  views.py
src/trusted_devices/management/commands/: cleanup_devices.py
src/trusted_devices/migrations/: 0001_initial.py  0002_add_device_name_field.py  0003_trusteddevice_last_ip_and_more.py
test_project/project/: settings.py  swagger.py  urls.py
tests/: conftest.py  factories.py  fakes.py  settings.py  test_authentication.py  test_management.py  test_models.py  test_permissions.py  test_serializers.py  test_signals.py  test_utils.py  test_views.py  urls.py
usage/: index.html
