[project]
name = "django-package-template"
version = "0.1.0"
description = "A modern, production-ready template for building reusable Django packages"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jakhongir Ganiev", email = "contact@jakhongir.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["django", "template", "package", "boilerplate", "reusable", "plugin"]

dependencies = ["django>=4.2,<5.3"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "twine>=6.1.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
